# constrain-llm-behavior-gemini

./: .experiment_setup_complete  .gitignore  .resource_finder_complete  CHANGELOG.md  CITATIONS.bib  EXPECTED_RESULTS.md  MANIFEST.md  Makefile  README.md  REPORT.md  SUMMARY.md  TROUBLESHOOTING.md  analyze_dataset.py  check_data.py  check_packages.py  download_datasets.py  inspect_results.py  literature_review.md  mock_demo.py  planning.md  plot_results.py  pyproject.toml  requirements.txt  resources.md  run_experiment.sh  setup_env.sh  test_suite.sh
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
experiment/: README.md
src/: analyze_results.py  experiment_runner.py  scoring_utils.py
tests/: test_experiment_runner.py
